devel
-----

* BTS-977: Added an error message for when an unauthorized user makes an 
  HTTP GET request to current database from a database name that exists which 
  the user can't access and from a database name that doesn't exist, so both
  requests have the same error message (`_db/<dbName>/_api/database/current`).

* BTS-325: Changed the HTTP status code from `400` to `404` of the ArangoDB
  error code `ERROR_GRAPH_REFERENCED_VERTEX_COLLECTION_NOT_USED` to handle
  this error in accordance to our edge errors.

* Added new AQL function SHA256(value).

* Adjust permissions for "search-alias" views.

  Previously, "search-alias" views were visible to users that didn't have read
  permissions on the underlying referenced collections. This was inconsistent, 
  because "arangosearch" views weren't shown to users that didn't have read 
  permissions on the underlying links. 
  Now, the behavior for "search-alias" views is the same as for "arangosearch" 
  views, i.e. "search-alias" views are not shown and are not accessible for 
  users that don't have at least read permissions on the underlying collections.

* BTS-969: Added restriction for HTTP request `/cluster/rebalance`not to 
  consider servers that have failed status as a possible target for rebalancing
  shards in its execution plan.

* Added index cleanup in Supervision. If an index was not created successfully
  and the coordinator which initiated the creation was rebooted or is dead,
  then the agency Supervision will drop the index again. If it was created
  successfully, the agency Supervision will finalize it.

* BTS-742: Added restriction for, when in smart graph, not accepting satellites
  in invalid format when storing a graph (like `{satellites: null}`).

* Temporary fix for BTS-1006 (hides new view types).

* Updated arangosync to v2.12.0.

* Improve upload and download speed of hotbackup by changing the way we use
  rclone. Empty hash files are now uploaded or downloaded by pattern, and