@@ -56,30 +56,35 @@ class QueryRegistryFeature final : public ArangodFeature {
   // tracks a slow query, using execution time
   void trackSlowQuery(double time);
 
-  bool trackingEnabled() const { return _trackingEnabled; }
-  bool trackSlowQueries() const { return _trackSlowQueries; }
-  bool trackQueryString() const { return _trackQueryString; }
-  bool trackBindVars() const { return _trackBindVars; }
-  bool trackDataSources() const { return _trackDataSources; }
-  double slowQueryThreshold() const { return _slowQueryThreshold; }
-  double slowStreamingQueryThreshold() const {
+  bool trackingEnabled() const noexcept { return _trackingEnabled; }
+  bool trackSlowQueries() const noexcept { return _trackSlowQueries; }
+  bool trackQueryString() const noexcept { return _trackQueryString; }
+  bool trackBindVars() const noexcept { return _trackBindVars; }
+  bool trackDataSources() const noexcept { return _trackDataSources; }
+  double slowQueryThreshold() const noexcept { return _slowQueryThreshold; }
+  double slowStreamingQueryThreshold() const noexcept {
     return _slowStreamingQueryThreshold;
   }
-  bool failOnWarning() const { return _failOnWarning; }
-  bool requireWith() const { return _requireWith; }
+  bool failOnWarning() const noexcept { return _failOnWarning; }
+  bool requireWith() const noexcept { return _requireWith; }
 #ifdef USE_ENTERPRISE
-  bool smartJoins() const { return _smartJoins; }
-  bool parallelizeTraversals() const { return _parallelizeTraversals; }
+  bool smartJoins() const noexcept { return _smartJoins; }
+  bool parallelizeTraversals() const noexcept { return _parallelizeTraversals; }
 #endif
-  bool allowCollectionsInExpressions() const {
+  bool allowCollectionsInExpressions() const noexcept {
     return _allowCollectionsInExpressions;
   }
-  uint64_t queryGlobalMemoryLimit() const { return _queryGlobalMemoryLimit; }
-  uint64_t queryMemoryLimit() const { return _queryMemoryLimit; }
-  double queryMaxRuntime() const { return _queryMaxRuntime; }
-  uint64_t maxQueryPlans() const { return _maxQueryPlans; }
-  aql::QueryRegistry* queryRegistry() const { return _queryRegistry.get(); }
-  uint64_t maxParallelism() const { return _maxParallelism; }
+  bool logFailedQueries() const noexcept { return _logFailedQueries; }
+  uint64_t queryGlobalMemoryLimit() const noexcept {
+    return _queryGlobalMemoryLimit;
+  }
+  uint64_t queryMemoryLimit() const noexcept { return _queryMemoryLimit; }
+  double queryMaxRuntime() const noexcept { return _queryMaxRuntime; }
+  uint64_t maxQueryPlans() const noexcept { return _maxQueryPlans; }
+  aql::QueryRegistry* queryRegistry() const noexcept {
+    return _queryRegistry.get();
+  }
+  uint64_t maxParallelism() const noexcept { return _maxParallelism; }
 
  private:
   bool _trackingEnabled;
@@ -96,6 +101,7 @@ class QueryRegistryFeature final : public ArangodFeature {
   bool _parallelizeTraversals;
 #endif
   bool _allowCollectionsInExpressions;
+  bool _logFailedQueries;
   uint64_t _queryGlobalMemoryLimit;
   uint64_t _queryMemoryLimit;
   double _queryMaxRuntime;
